# faze_ai

./: README.md  pyproject.toml
src/: cli.py  faces.py  main.py
src/archive/logic/: faces.py
src/config/: faces_api_exceptions.py  settings.py  swagger_strings.py
src/download/: kaggle.py
src/facenet_detect/: detect_face.py
src/logic/: faces.py
src/logic/utils/: celebs_utils.py  detection_utils.py  emotion_utils.py  facenet_utils.py  gender_utils.py  noise_utils.py  tf_utils.py
src/output/: encodings.pkl
src/training/: datasets.py
