[project]
name = "tpl-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    "joblib>=1.4.2",
    "numpy>=2.2.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fastapi>=0.115.8",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
