[project]
name = "tpl-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "distribute>=0.7.3",
    "dlib>=19.24.6",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "imageio>=2.37.0",
    "joblib>=1.4.2",
    "kagglehub>=0.3.9",
    "numpy>=2.2.3",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "fastapi>=0.115.8",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
